basic.css
/* ... */
.carousel-control{
  width:64px !important;
  height:64px !important;
  margin:150px 5px 230px 5px;
  background-color:black;
  opacity:0.4 !important;
  border-radius: 32px;
} 

.carousel-control #icon1, .carousel-control #icon2{
  height:40px;
  
}
.mobile{
display: block;
}
.Desktop{
display: none;
}
@media (min-width:992px){
    .mobile{
    display: none;
    }
    .Desktop{
    display: block;
    }
} 


.layer2{
  background-color: #ECF0F1;;
  /*background-size: cover;*/
  /*background-repeat: no-repeat;*/
  /*background-position: center;*/
  /*height:400px;*/
  /*margin-top: 0px;*/
}
.layer2 > .container{
  height:100%; 
}
#section-2 .heading{
  height:100px;
  padding-top:50px;
} 
.why-data {
    position: relative;
   background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
}

.icon-box-circle{
  /*background-color: red;*/
    position: relative;
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
    height:250px;
    width: 250px;
    box-shadow: 0 42px 33px -27px rgba(104, 178, 226, 0.8);
    border: 6px solid #2b9eca;
    margin: 20px;
    border-radius: 7px;
    background-color: #fff
}

.process-step-arrow:after {
    content: '';
    height: 3px;
    background: #2b9eca;
    width: 85px;
    position: absolute;
    right: -42px;
    top: 50%;
}

.process-step-arrow:before {
    content: '';
    position: absolute;
    width: 0;
    height: 0;
    top: 50%;
    border-style: solid;
    border-width: 10px 0 7px 20px;
    border-color: transparent transparent transparent #2b9eca;
    right: -45px;
    transform: translateY(-50%);
}

.section-subhead {
    letter-spacing: 1px;
    word-spacing: 2px;
    text-transform: uppercase;
    font-family: 'Lato', "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-size: 1em;
    margin-bottom: 10px;
}

.icon-box-circle:hover {
    transform: scale(1.1);
    transition: .5s;
    box-shadow: 0 2px 20px 0 #2b9eca;
}

.icon-box-content{
    position: relative;
}
.icon-box-content .sec-process-title{
    padding: 10px 12px;
    color: white;
    background-color: #2090c5;
    position: sticky;
    max-height: 70px;
    font-size: 15px;
}

.icon-box-content .sec-process-title span.badge {
    background-color: white;
    color: #2b9eca;
    height: 24px;
    width: 24px;
    border-radius: 14px;
    padding-top: 5px;
    font-size: 14px;
    margin-right: 2px;
}

.icon-box-content .sec-process-body{
    font-size: 14px;
    text-align: left !important;
    padding: 10px;
    overflow-y: auto;
    max-height: 180px;
}

.section-grey {
    background-color: #f5f5f5;
}

.section {
    padding: 75px 0;
}

.section-title{
    position: relative;
    font-family: 'Lato', "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-weight: 500;
}

.section-title:after {
    position: absolute;
    bottom: -25px;
    left: 46%;
    width: 100px;
    height: 3px;
    background-color: #BDBDBD;
    content: '';
    text-align: center;
}

.section-heading {
    margin : 20px auto;
    text-align: center;
    color: #fff;
    font-size: 40px;
    font-weight: 700;
    font-family: "Helvetica Neue";
}
/*.layer4{
  background-color: white!important;
}*/
.price img{
   margin-top: 10px;
}
.price{
    background-color: white;
    margin: 20px;
    box-shadow: 0 0 40px rgba(0, 0, 0, 0.05);
    border-radius: 2px;
    padding: 15px;
    height: 240px;
    border: 1px solid #d9d9d9;
    text-align: left;
}
.price h5{
  color:#00AEEF;
  text-transform: uppercase;
    margin-top: 12px;
}
.price:hover{
   /*box-shadow: 0px 6px 12.5px 0px;*/
}

.price-plan {
    margin-top: 50px;
    position: relative;
}

.price-plan .offer {
    position: absolute;
    top:0;
    right:0;
    background-image: linear-gradient(90deg, #073aae, #2c6ada);
    color: white;
    padding: 4px 10px;
    text-transform: capitalize;
    z-index: 99;
    font-size: 13px;
}

/*linear-gradient(90deg, #da2626fa, #ff0000)*/

.price-plan .offer .condition {
    font-size: 11px;
    font-style: italic;
}

.price-plan .card{
    padding: 34px 32px;
    color: #a6aaac;
    background-color: #fff;
    min-height: 530px;
}


.layer4 .card .price-title {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin-bottom: 11px;
    font-size: 24px;
    font-weight: 500;
    color: #1f1b28;
}

.layer4 .section-title:after {
    position: absolute;
    bottom: -20px;
    left: 48%;
    width: 60px;
    height: 3px;
    background-color: #BDBDBD;
    content: '';
    text-align: center;
}

.card .price-text {
    margin-bottom: 3px;
    text-transform: capitalize;
    min-height: 24px;
}

.card .price-amount {
    margin-bottom: 48px;
    margin-top: 30px;
    color: #1f1b28;
}

.price-amount .price-cost {
    margin-right: 6px;
    line-height: 1;
    font-size: 48px;
    display: inline-block;
}

.price-amount .price-billing {
    position: relative;
    top: 5px;
    color: #1f1b28;
    display: inline-block;
}

.price-decor {
    background-image: linear-gradient(90deg, #073aae, #2c6ada);
    height: 5px;
    margin-bottom: 32px;
}

.price-deposit {
    margin-top: 15px;
    color: #a6aaac;
    text-transform: capitalize;
}

ul.price-points {
    list-style-type: none;
    margin : 0;
    padding: 0;
    margin-bottom: 45px;
}

ul.price-points li {
    margin: 10px 5px;
}

ul.price-points li i {
    color: #205dce;
    font-size: 18px;
    margin-right: 10px;
}

.price-action {
    text-align: center;
    position: absolute;
    bottom: 30px;
}

.btn-rent {
    color: #205dce !important;
    padding: 9px !important;
    width: 160px;
    text-align: center;
    border: 2px solid #205dce !important;
    font-weight: 700;
    font-size: 16px;
}
/* ... */

